tests/netconvert/import/XML/errors/xml_false_type/errors.netconvert
Error: Could not open types-file 'invalid.typ.xml'.
Quitting (on error).
